# mcp-score

./: README.md  pyproject.toml
src/mcp_score/: __init__.py  cli.py  runner.py
src/mcp_score/formatters/: cta.py  json_fmt.py  markdown.py  terminal.py
tests/: conftest.py  test_cli.py  test_formatters.py  test_runner.py
