[project]
name = "mcp-score"
version = "0.1.0"
description = "Score your MCP server's quality before publishing"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "mcp-scoring-engine>=0.1.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
mcp-score = "mcp_score.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_score"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
